# fastest_det_ros

./: .gitmodules  README.md  package.xml  setup.cfg  setup.py
fastest_det_ros/: bbox_publisher.py  inference.py
yolo_fastest_ros/: =0.4.1  bbox_publisher.py  inference.py
