<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>yolo_fastest_ros</name>
  <version>0.0.0</version>
  <description>ROS2 Yolo Fastest ROS2 package</description>
  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>TBD</license>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
