<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fastest_det_ros</name>
  <version>0.0.0</version>
  <description>FastestDet package</description>
  <maintainer email="jimenojmm@gmail.com">juan</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python-pytorch-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
